Now able to read audio and compute RMS

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="https://clojurescript.org/images/cljs-logo-icon-32.png">
   </head>
   <body>
-    <h1>Ciccia</h1>
+    <h1>Scaly Thing</h1>
 
     <div id="app"></div>
     <!-- include your ClojureScript at the bottom of body like this -->
